add docker  and more