@@ -13,6 +13,7 @@ import ta3ikdb.repositories.CarRepository;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/accident")
@@ -32,14 +33,20 @@ public class AccidentController {
     @GetMapping("/top")
     List<Object[]> getAccidentTop() {
 
-        String sql = "select " + "c.brand as brand, " + "c.model as model, " + "count(*) as count " + "from car c left outer join accident_cars " + "on c.id = accident_cars.cars_id " + "group by c.brand, c.model";
+        String sql = "select " +
+                "c.brand as brand, " +
+                "c.model as model, " +
+                "count(*) as count " +
+                "from car c left outer join accident_cars " +
+                "on c.id = accident_cars.cars_id " +
+                "group by c.brand, c.model";
         return jdbcTemplate.queryForList(sql).stream().map(row -> {
             Object[] array = new Object[3];
             array[0] = row.get("brand");
             array[1] = row.get("model");
             array[2] = row.get("count");
             return array;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @PutMapping("")
@@ -47,14 +54,29 @@ public class AccidentController {
         List<Car> cars = accidentDTO.getVinNumbers().stream().map((vin) -> {
             Optional<Car> optionalCar = carRepository.getCarByVinNumber(vin);
             return optionalCar.orElse(null);
-        }).filter(Objects::nonNull).toList();
+        }).filter(Objects::nonNull).collect(Collectors.toList());
         accidentRepository.save(new Accident(cars));
     }
 
     @PostMapping("{vin}")
     AccidentsDTO getAccidents(@PathVariable Long vin) {
-        return AccidentsDTO.builder().accidentDTOs(accidentRepository.accidentsByVinNumber(vin).stream().map((accident -> {
-            return AccidentDTO.builder().vinNumbers(accident.getCars().stream().map(Car::getVinNumber).toList()).build();
-        })).toList()).build();
+        return AccidentsDTO
+                .builder()
+                .accidentDTOs(
+                        accidentRepository
+                                .accidentsByVinNumber(vin)
+                                .stream()
+                                .map(
+                                        (accident ->
+                                                AccidentDTO
+                                                        .builder()
+                                                        .vinNumbers(accident
+                                                                .getCars()
+                                                                .stream()
+                                                                .map(Car::getVinNumber)
+                                                                .collect(Collectors.toList()))
+                                                        .build()))
+                                .collect(Collectors.toList()))
+                .build();
     }
 }
